--- a/Java/Android_Client/app/src/main/res/values/strings.xml
+++ b/Java/Android_Client/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Android_Client</string>
 
 
-    <string name="username">Usernam</string>
+    <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="bandName">Band Name</string>
     <string name="login">Login</string>
